AMBARI-12531. RU: pre-requisite dialog isn't word-wrapping correctly (alexantonenko)

--- a/ambari-web/app/styles/application.less
+++ b/ambari-web/app/styles/application.less
@@ -5844,8 +5844,33 @@ input[type="radio"].align-checkbox, input[type="checkbox"].align-checkbox {
   }
 }
 
-#pre-upgrade-check {
-  .icon-warning-sign {
-    color: @health-status-yellow;
+.cluster-check-popup {
+  .modal {
+    width: 950px;
+    margin-left: -475px;
+    #pre-upgrade-check {
+      .icon-warning-sign {
+        color: @health-status-yellow;
+      }
+      pre {
+        word-break: keep-all;
+      }
+      .configs-table {
+        table-layout: fixed;
+        font-size: 0.95em;
+        td {
+          word-wrap: break-word;
+          &.no-value {
+            font-style: italic;
+          }
+        }
+        td:first-child, td:first-child + td, th:first-child, th:first-child + th {
+          width: 12.5%;
+        }
+        td:first-child + td + td, td:first-child + td + td + td, td:first-child + td + td + td + td, th:first-child + th + th, th:first-child + th + th + th, th:first-child + th + th + th + th {
+          width: 25%;
+        }
+      }
+    }
   }
 }
